# oak-bench

./: .gitignore  .pre-commit-config.yaml  README.md  calculate_test_score.py  eval_bench.py  eval_bench_sdk.py  oak_health_test_suite_v1.json  pyproject.toml  run.py  setup_cuga.sh
.github/workflows/: release.yml
config/: global.env  oak_health_insurance.env
config_loader/: __init__.py  loader.py
helpers/: __init__.py  config_loader.py  load_env.sh  metrics.py  run_registry.sh  sdk_eval_helpers.py
oak_health/: oak_mcp_servers.yaml  pyproject.toml
oak_health/src/oak_health/: data.py  main.py  models.py
oak_health/tests/: conftest.py  pytest.ini  test_benchmark_scenarios.py  test_benefits.py  test_billing.py  test_care_providers_mri.py  test_claims.py  test_coverage.py  test_find_care.py  test_medical_info.py  test_member.py  test_plans.py
scripts/: viz.sh
templates/: calculate_test_score.py  eval_loop_template.py  simple_example.json
