[project]
name = "oak-health-insurance"
version = "1.3.0"
description = "Oak Health Insurance FastAPI application and benchmark data"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]

[project.scripts]
cuga-oak-health = "oak_health.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oak_health"]
